--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.8",
+    "lucide-react": "^0.548.0",
     "next": "15.5.3",
+    "next-intl": "^4.4.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
