Collection edit Prototype

--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "@headlessui/react": "^2.2.8",
     "lucide-react": "^0.548.0",
-    "next": "15.5.3",
+    "next": "^15.5.7",
     "next-intl": "^4.4.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react": "^19.1.2",
+    "react-dom": "^19.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
