--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^17.2.3",
     "lucide-react": "^0.548.0",
     "next": "^15.5.7",
+    "next-auth": "^5.0.0-beta.30",
     "next-intl": "^4.4.0",
     "pg": "^8.16.3",
     "react": "^19.1.2",
