User profile and User orders

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@auth/core": "^0.41.1",
+    "@auth/prisma-adapter": "^2.11.1",
     "@headlessui/react": "^2.2.8",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
