landing page, shopping bag, implement add to bag

--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@headlessui/react": "^2.2.8",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "dotenv": "^17.2.3",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.548.0",
     "next": "^15.5.7",
     "next-auth": "^5.0.0-beta.30",
@@ -22,6 +25,7 @@
     "pg": "^8.16.3",
     "react": "^19.1.2",
     "react-dom": "^19.1.2",
+    "three": "^0.182.0",
     "zod": "^4.2.0"
   },
   "devDependencies": {
