--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "@headlessui/react": "^2.2.8",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-select": "^2.2.6",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
+    "@tanstack/react-table": "^8.21.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.548.0",
@@ -25,6 +30,7 @@
     "pg": "^8.16.3",
     "react": "^19.1.2",
     "react-dom": "^19.1.2",
+    "tailwind-merge": "^3.4.0",
     "three": "^0.182.0",
     "zod": "^4.2.0"
   },
@@ -39,6 +45,7 @@
     "eslint-config-next": "15.5.3",
     "prisma": "^7.1.0",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
