--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "pg": "^8.16.3",
     "react": "^19.1.2",
     "react-dom": "^19.1.2",
+    "recharts": "^2.15.4",
     "tailwind-merge": "^3.4.0",
     "three": "^0.182.0",
     "zod": "^4.2.0"
